[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/thief_controller/models/octahedron.tres" type="ArrayMesh" id=1]
[ext_resource path="res://addons/thief_controller/scripts/player/light_detector.gd" type="Script" id=2]


[node name="LightDetector" type="Spatial"]
script = ExtResource( 2 )

[node name="Octahedron" type="MeshInstance" parent="."]
transform = Transform( 0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, 0, 0, 0 )
layers = 2
cast_shadow = 0
mesh = ExtResource( 1 )
material/0 = null

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 64, 64 )
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="CameraTop" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0.35, 0 )
current = true

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 64, 64 )
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="CameraBottom" type="Camera" parent="Viewport2"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.35, 0 )
